# python-practice

./: .devcontainer.json  .env.example  .gitignore  .project  README.md  compose.yml  pyproject.toml
lab-01/: exercise1.md  exercise2.md  solution_exercise1.py
lab-02/: exercise.md
lab-02/solution/: Mdg_Giftregistry.xml  bad_Mdg_Giftregistry.xml  main.py
lab-03/: exercise.md
lab-03/solution/: .gitignore  downloader.py
lab-04/: exercise.md
session-01/: helloworld.py  importer.py  scopes.py  variables.py
session-01/foo/: __init__.py  bar.py  boo.py  moo.py
session-01/foo/loo/: __init__.py
session-02/: assignments.py  conditional.py  loops.py
session-03/: comprehension.py  dir.py  fibo.py  formatspecs.py  groupby.py  listop.py  neomatrix.py  prog-name.py  prog-pos.py  prog.py  setop.py
session-04/: classdef.py  dynamix.py  inheritance.py  multiple.py  op.py  ref.py
session-05/tk/: actresslist.py  colorchooser.py  hellotkinter.py  hellowidget.py  layoutmanager.py  menu.py  tkcalc.py
session-06/: aggregrate_test.py  booltrick.py  booltrick_test.py  fizzbuzz.py  fizzbuzz_test.py  power.py  power_test.py
src/: cleanup.py  convert.py  count.py  file_query.py  gemini_query.py  main.py  response_operator.py
src/prompts/: prompt.txt.example  request_1.txt  request_2.txt
