[project]
name = "wma2mp3"
version = "0.1.0"
description = "small code to convert wma songs to mp3"
authors = [
    {name = "sunshine55"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydub (>=0.25.1,<0.26.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
