[project]
name = "yt2mp3"
version = "0.1.0"
description = "small code to download youtube as mp3"
authors = [
    {name = "sunshine55"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "pytubefix (>=8.12.3,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
